# nebula

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml  main.rs  render.rs
client/networking/: mod.rs  packet_str.rs  tests.rs
client/src/networking/: mod.rs
client/src/user_interface/: message_manager.rs  mod.rs
client/src/user_interface/tests/: mod.rs
client/user_interface/: channel_selector.rs  chat.rs  message_manager.rs  mod.rs  selectable_text.rs  styles.rs
client/user_interface/tests/: message_manager_tests.rs
credientials_authenticator/: Cargo.toml
credientials_authenticator/src/: lib.rs
interface/: main.rs
server/: Cargo.toml  main.rs
server/database/: data_types.rs  database_actions.rs  database_commands.rs  init_db commands.txt  init_db_commands.txt  mod.rs  populate_db_commands.txt  postgres_commands.rs  server_commands.rs  setup_db_commands.txt
server/database/tests/: init_db.rs  mod.rs  tests.rs
server/networking/: mod.rs
server/src/: main.rs
server/src/database/: data_types.rs  database_actions.rs  database_commands.rs
server/src/database/tests/: init_db.rs  mod.rs  tests.rs
server/src/networking/: mod.rs
shared/credientials_authenticator/src/: lib.rs
shared/network_manager/: Cargo.toml
shared/network_manager/src/: lib.rs
