[package]
name = "nebula"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
iced = "0.9.0"
tokio-postgres = "0.7.8"
anyhow = "1.0.71"


[[bin]]
name = "server"
path = "server/main.rs"

[[bin]]
name = "client"
path = "client/main.rs"
